product model and api updated
